gerber2image add inclued and modify qrc

--- a/example/gerber2image/gerber2image.qrc
+++ b/example/gerber2image/gerber2image.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/image">
-        <file>gerber_exporter.png</file>
+        <file>gerber2image.png</file>
     </qresource>
 </RCC>
